--- a/baseline_trials/Introduction.html
+++ b/baseline_trials/Introduction.html
@@ -28,6 +28,10 @@
         Bonus points are calculated once all participants have completed the study.
     </p>
 
+    <p>
+        You will make {{C.NUM_ROUNDS}} decisions in total. We estimate this will take you 30 minutes.
+    </p>
+
     <b>
         Please read the instructions carefully, as your decisions affect not only your own Toluna points but also those of other participants.
     </b>
