--- a/baseline_trials/Introduction.html
+++ b/baseline_trials/Introduction.html
@@ -5,7 +5,9 @@
 {{ endblock }}
 {{ block content }}
 
-<div>
+
+
+<div class="card-body">
 
     <p>
         This study is about decision-making. Throughout the study, you will be paired with other participants who are also taking part in the study.
@@ -31,25 +33,25 @@
     <b>
         Please read the instructions carefully, as your decisions affect not only your own Toluna points but also those of other participants.
     </b>
-</div>
-
-
 
 
 <!--    <div style="display: flex; justify-content: flex-end">-->
 <!--      {% next_button %}-->
 <!--    </div>-->
     <div style="display: flex; justify-content: flex-end">
-            <button style="
-                        color: #fff;
-                        background-color: #007bff;
-                        border: 1px solid #007bff;
-                        font-size: 1rem;
-                        border-radius: 0.25rem;">
-
+        <button style="
+                    color: #fff;
+                    background-color: #007bff;
+                    border: 1px solid #007bff;
+                    font-size: 1rem;
+                    border-radius: 0.25rem;">
             START
         </button>
     </div>
+
+</div>
+
+
 
 
 {{ endblock }}
