--- a/baseline_trials/Introduction.html
+++ b/baseline_trials/Introduction.html
@@ -8,7 +8,7 @@
 <div>
 
     <p>
-        This study is about decision-making. Throughout the study, you will be paired with other participants who are also taking part in the study.
+        Throughout the study, you will be paired with other participants who are also taking part in the study.
     </p>
 
     <p>
@@ -26,10 +26,6 @@
 
     <p>
         Bonus points are calculated once all participants have completed the study.
-    </p>
-
-    <p>
-        You will make {{C.NUM_ROUNDS}} decisions in total. We estimate this will take you 30 minutes.
     </p>
 
     <b>
