--- a/baseline_trials/Reminder.html
+++ b/baseline_trials/Reminder.html
@@ -65,7 +65,7 @@
                     Person C receives 4 points in Stage 2 and can use these points to remove points.
                     Removed points are eliminated and cannot be used by anyone.
                     Removing <b>3 points</b> from Person A will cost Person C <b>1 point</b>
-                    (cost of removing OR giving 1 point: 0.33 points).</p>
+                    (cost of removing 1 point: 0.33 points).</p>
             </div>
         {% endif %}
 
