--- a/baseline_trials/Demographics.html
+++ b/baseline_trials/Demographics.html
@@ -14,10 +14,10 @@
 
 {{ block content }}
 
-    <p>
-        Please answer the following questions. These are used for demographic purposes only.
-        This information will not be associated with your name. You remain anonymous to all the other players and the experimenters.
-    </p>
+<!--    <p>-->
+<!--        Please answer the following questions. These are used for demographic purposes only.-->
+<!--        This information will not be associated with your name. You remain anonymous to all the other players and the experimenters.-->
+<!--    </p>-->
 
     {% for field in form %}
         {% formfield field %}
